--- a/appsettings.json
+++ b/appsettings.json
@@ -1,7 +1,7 @@
 {
   "MongoDbSettings": {
-    "ConnectionString" : "mongodb+srv://sample-admin-user:samadusr20@cluster91897.wlth01r.mongodb.net/?retryWrites=true&w=majority&appName=Cluster91897",
-    "DatabaseName" : "sample_mflix"
+    "ConnectionString" : "",
+    "DatabaseName" : ""
   },
   "Logging": {
     "LogLevel": {
