DotNetEnv package added

--- a/GettingStarted.csproj
+++ b/GettingStarted.csproj
@@ -12,6 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="DotNetEnv" Version="3.1.1" />
     <PackageReference Include="HotChocolate.AspNetCore" Version="15.1.10" />
     <PackageReference Include="HotChocolate.AspNetCore.CommandLine" Version="15.1.10" />
     <PackageReference Include="HotChocolate.Types.Analyzers" Version="15.1.10">
